<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<artifactId>bindgen-parent</artifactId>
	<groupId>org.bindgen</groupId>
	<version>7.0.0</version>
	<packaging>pom</packaging>

	<name>Bindgen (parent)</name>

	<properties>
		<maven.compiler.release>25</maven.compiler.release>
		<bindgen.java.version>25</bindgen.java.version>

		<bindgen.slf4j.version>2.0.19</bindgen.slf4j.version>

		<maven.compiler.version>3.16.0</maven.compiler.version>
		<maven.processor.version>5.2</maven.processor.version>
		<maven.deploy.version>3.2.0</maven.deploy.version>
		<maven.source.version>3.4.0</maven.source.version>
		<maven.javadoc.version>3.12.0</maven.javadoc.version>
		<maven.clean.version>3.5.0</maven.clean.version>
		<maven.install.version>3.2.0</maven.install.version>
		<maven.jar.version>3.5.1</maven.jar.version>
		<maven.resources.version>3.5.0</maven.resources.version>
		<maven.site.version>3.22.0</maven.site.version>
		<maven-surefire-plugin.version>3.6.0</maven-surefire-plugin.version>
		<maven-enforcer-plugin.version>3.6.3</maven-enforcer-plugin.version>
		<maven.gitflow-maven-plugin.version>1.21.0</maven.gitflow-maven-plugin.version>

		<joist.version>1.13.3</joist.version>
		<junit.version>6.1.3</junit.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.javadoc.skip>true</maven.javadoc.skip>
		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>

		<minimal.jdk.version>25</minimal.jdk.version>
		<minimal.maven.version>3.5.2</minimal.maven.version>
		
		<jakarta.version>3.0.0</jakarta.version>
	</properties>

	<modules>
		<module>processor</module>
		<module>examples</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>joist</groupId>
				<artifactId>joist-util</artifactId>
				<version>${joist.version}</version>
			</dependency>

			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit.version}</version>
			</dependency>

			<!-- joist:joist-util dependency: override version (requireUpperBoundDeps constraint) -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${bindgen.slf4j.version}</version>
			</dependency>
			
			<dependency>
				<groupId>jakarta.annotation</groupId>
				<artifactId>jakarta.annotation-api</artifactId>
				<version>${jakarta.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>${maven.clean.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven.jar.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven.resources.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>${maven.site.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>${maven.install.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>${maven-enforcer-plugin.version}</version>
					<executions>
						<execution>
							<id>enforce</id>
							<goals>
								<goal>enforce</goal>
							</goals>
							<configuration>
								<rules>
									<requireUpperBoundDeps />
									<requireMavenVersion>
										<version>[${minimal.maven.version},)</version>
									</requireMavenVersion>
									<requireJavaVersion>
										<version>${minimal.jdk.version}</version>
									</requireJavaVersion>
								</rules>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>com.amashchenko.maven.plugin</groupId>
					<artifactId>gitflow-maven-plugin</artifactId>
					<version>${maven.gitflow-maven-plugin.version}</version>
					<configuration>
						<gitFlowConfig>
							<productionBranch>master</productionBranch>
							<developmentBranch>dev</developmentBranch>
							<featureBranchPrefix>ft-</featureBranchPrefix>
							<releaseBranchPrefix>rl-</releaseBranchPrefix>
							<hotfixBranchPrefix>hf-</hotfixBranchPrefix>
							<versionTagPrefix>v</versionTagPrefix>
							<origin>origin</origin>
						</gitFlowConfig>
						<skipFeatureVersion>true</skipFeatureVersion>
						<!-- do not run verify, done on CI -->
						<skipTestProject>true</skipTestProject>
						<!-- In X.Y.Z, update Y -->
						<versionDigitToIncrement>1</versionDigitToIncrement>
						<!-- do not push during release; we perform this independently-->
						<pushRemote>false</pushRemote>
						<!-- build project during release -->
						<installProject>true</installProject>
						<!-- ensure all modules are processed by versions: calls -->
						<argLine>-DskipTests=true -DprocessAllModules=true -DskipResolution=true</argLine>
						<!-- print subcommand output -->
						<verbose>true</verbose>
						<!-- Needed as it implies project reloading during versioning, and triggers resolution failure -->
						<updateOutputTimestamp>false</updateOutputTimestamp>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven.compiler.version}</version>
					<configuration>
						<compilerArgument>-proc:none</compilerArgument>
						<testCompilerArgument>-proc:none</testCompilerArgument>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.bsc.maven</groupId>
					<artifactId>maven-processor-plugin</artifactId>
					<version>${maven.processor.version}</version>
					<configuration>
						<processors>
							<processor>org.bindgen.processor.Processor</processor>
						</processors>
					</configuration>
					<executions>
						<execution>
							<id>maven-processor-plugin-default</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>process</goal>
							</goals>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>org.bindgen</groupId>
							<artifactId>bindgen</artifactId>
							<version>${project.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${maven.deploy.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${maven.source.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${maven.javadoc.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>bindgen</id>
			<url>http://repo.joist.ws/</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>nexus-igloo-releases</id>
			<name>Nexus Igloo Releases</name>
			<url>https://nexus.tools.kobalt.fr/repository/igloo-releases/</url>
		</repository>
		<snapshotRepository>
			<id>nexus-igloo-snapshots</id>
			<name>Nexus Igloo Snapshots</name>
			<url>https://nexus.tools.kobalt.fr/repository/igloo-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/igloo-project/igloo-parent/issues</url>
	</issueManagement>

	<ciManagement>
		<system>GitLab</system>
		<url>https://gitlab.tools.kobalt-si.fr/igloo/igloo-parent/pipelines</url>
	</ciManagement>

	<scm>
		<url>git@github.com:igloo-project/bindgen.git</url>
		<connection>scm:git:git@github.com:igloo-project/bindgen.git</connection>
		<developerConnection>scm:git:git@github.com:igloo-project/bindgen.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

</project>
